# stravinsight

./: .env  .env.dev  .gitignore  .php-cs-fixer.dist.php  Dockerfile  Makefile  README.md  compose.traefik.yaml  compose.yaml  composer.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
ai/: Dockerfile  main.py  pyproject.toml  requirements.txt
ai/data/: activity_data.csv  raw-data-kaggle.csv
ai/models/: __init__.py  predict_duration_model.ipynb  predict_duration_model.pth  predict_duration_model.py
ai/scripts/scraping/: __init__.py  scrap_activities.py
assets/: app.js
assets/styles/: app.css
config/: bundles.php  services.yaml
frankenphp/: Caddyfile  docker-entrypoint.sh
migrations/: Version20250414131619.php  Version20250415065501.php  Version20250416123126.php  Version20250417131348.php  Version20250422084617.php  Version20250422152057.php  Version20250424084502.php  Version20250505130431.php  Version20250612100525.php  Version20250619073901.php
public/: robots.txt  sitemap.xml
src/Controller/: ActivityController.php  DashboardController.php  HeatmapController.php  HomeController.php  LegalController.php  PredictionController.php  StravaLoginController.php  StripeController.php
src/DataFixtures/: ActivityFixtures.php  UserFixtures.php
src/Entity/: AIresponse.php  Activity.php  ActivityDetails.php  ActivityStream.php  HearthRateZones.php  User.php
src/EventSubscriber/: LocaleSubscriber.php  SubscriptionCheckSubscriber.php
src/Factory/: ActivityDetailsFactory.php  (+4 more)
templates/: base.html.twig
(+88 files in other folders)
